update: mapper tests